Improve mobile responsiveness: Add mobile menu to all pages
- Add mobile hamburger menu to all pages
- Position menu button in top-right corner
- Make navigation consistent across pages
- Add mobile-menu.js for shared functionality
- Update navigation styles for better mobile experience

--- a/missions.html
+++ b/missions.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- Navigation (same as layout.html) -->
-    <nav class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
+    <nav class="nav-container fixed top-0 left-0 right-0">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex">
@@ -160,5 +160,6 @@
     <!-- Scripts -->
     <script src="js/main.js"></script>
     <script src="js/missions.js"></script>
+    <script src="js/mobile-menu.js"></script>
 </body>
 </html>
