--- a/social.html
+++ b/social.html
@@ -324,6 +324,7 @@
     <!-- Scripts -->
     <script src="js/main.js"></script>
     <script src="js/social.js"></script>
+    <script src="js/mobile-menu.js"></script>
     <script src="js/chat.js"></script>
 </body>
 </html>
